--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -r requirements-dev.txt
 
       - name: Run pytest
         run: |
-          pytest app/tests
+          pytest tests
 
   docker-build:
     runs-on: ubuntu-latest
