--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
